frontend/express/public/stylesheets/styles/blocks/_sidebar.scss
@use "../base/typography-variables" as t;
@use "../base/colors" as c;
@use "sass:map";

$bg-color: #24292e;

#cly-vue-sidebar {
    position: fixed;
    left: 0;
    width: 272px;
    background-color:#191C20;
    height: 100%;
    z-index: 1998; //100000;
    user-select: none;
    color: map.get(c.$colors, "warm-gray-40");
}

.cly-vue-sidebar {
    width: 100%;
    height: 100%;
    .cly-vue-listbox__item-label {
        width: 350px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    ul {
        list-style: none;
        padding: 0;
        margin: 0;

        li {
            padding: 0px;
        }
    }
    &__app-selector__dialog_box {
        .el-dialog__body {
            padding: 0px !important;
        }
    }

    .el-collapse {
        border: none;
    }

    &__app-name {
        font-size: 14px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
    &__app-name-type {
        width: 120px;
    }

    &__app-selector {
        border: 1px solid #424243;
        box-sizing: border-box;
        box-shadow: 0px 11px 14px rgba(0, 0, 0, 0.371635);
        border-radius: 4px;
        height: 50px;
    }

    &__app-type {
        opacity: .57;
    }

    &__menu-options {
        width: 48px;
        height: 100%;
        overflow: auto;
        color: map.get(c.$colors, "cool-gray-40");

        ul:first-child li:first-child {
            margin-top: 28px;
        }
    }

    &__menu-option {
        width: 48px;
        height: 24px;
        margin-top: 25px;
        font-size: t.$text-2xl-size;
        cursor: pointer;

        i:hover,
        &--selected {
            color: map.get(c.$colors, "primary-green");
        }
    }

    &__menu-option-app {
        background-color: map.get(c.$colors, "primary-green");
        border-radius: 4px;
        height: 24px;
        width: 24px;
    }

    &__menu-option-divider {
        width: 24px;
        border: 1px solid map.get(c.$colors, "warm-gray-70");
    }

    &__menu-option-toggle {
        height: 48px;
        background-color: $bg-color;
        border-top-left-radius: 50%;
        border-bottom-left-radius: 50%;
    }

    &__menu {
        width: 224px;
        background-color: $bg-color;
        color: map.get(c.$colors, "warm-gray-40");
        box-sizing: border-box;
        height: 100%;
        overflow: hidden;
    }
    &__menu-items {
        margin-bottom: 16px;
    }

    &__menu-items,
    &__submenu-items,
    .el-collapse-item__header {
        line-height: 20px;
        height: 20px;
        background-color: $bg-color;
        color: map.get(c.$colors, "warm-gray-40");
        border: none;
        font-size: t.$text-md-size;
        padding: 0;
        font-weight: t.$font-weight-text;
        font-family: t.$font-family;
        padding: 6px 12px;

        .el-collapse-item__arrow {
            margin-right: 0px;
        }

        &:hover {
            background-color: map.get(c.$colors, "warm-gray-80");
            color: map.get(c.$colors, "white");
            border-radius: 4px;
        }

        &--selected {
            background-color: map.get(c.$colors, "primary-green");
            border-radius: 4px;
            color: map.get(c.$colors, "white");

            &:hover {
                background-color: map.get(c.$colors, "primary-green");
                border-radius: 4px;
            }
        }
    }

    &__el-collapse--selected .el-collapse-item__header {
        border-radius: 4px;
        background-color:map.get(c.$colors, "warm-gray-80");
        color: map.get(c.$colors, "white");
    }

    .el-collapse-item__content {
        margin: 0;
        padding: 0;
    }

    .el-collapse-item__wrap {
        border-bottom: 1px solid map.get(c.$colors, "warm-gray-70");
        background-color: $bg-color;
        box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
        padding-bottom: 16px;
    }

    &__header {
        padding: 16px 12px;
        position: relative;

        .el-input__inner {
            height: 50px;
            padding-left: 49px;
        }

        .el-input__prefix {
            left: 0px;
            margin: 0px 12px;
            height: auto;
            margin-top: 12px;
        }
    }

    &__header-title {
        font-size: t.$text-lg-size;
        line-height: 24px;
        font-weight: t.$font-weight-primary;
        display: inline-block;
        margin-top: 12px;
    }

    &__header-button {
        float: right;
        top: 5px;
        position: relative;
    }

    &__main-menu {
        overflow: auto;
        height: calc(100% - 82px);
        ::-webkit-scrollbar-track {
	       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	        background-color: #F5F5F5;
        }
        ::-webkit-scrollbar {
	        width: 6px;
	        background-color: #F5F5F5;
        }

        ::-webkit-scrollbar-thumb {
	        background-color: #000000;
        }
    }

    &__app-image {
        width: 26px;
        height: 26px;
        background-size: 26px 26px;
        border-radius: 4px;
        background-position: center;
        display: inline-block;
    }

    &__user-popper {
        box-sizing: border-box;
        font-family: t.$font-family;
        padding: 14px 0px;
        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.18815);
        color: map.get(c.$colors, "cool-gray-100");
    }

    &__user-details {
        .bu-level {
            padding: 6px 12px;
        }
    }

    &__user-links {
        .bu-level {
            padding: 6px;
            margin: 0px 6px;

            &:hover {
                background-color: #F1F3F4;
                color: map.get(c.$colors, "blue-100");
                border-radius: 4px;

                .bu-level-item {
                    i {
                        color: map.get(c.$colors, "text-custom-1-active");
                    }
                }
            }

            .bu-level-item {
                &:first-child {
                    width: 15px;
                }

                i {
                    color: map.get(c.$colors, "cool-gray-40");
                }
            }
        }
    }

    &__user-info {
        width: 140px;

        p {
            padding: 0;
            margin: 0;

            &:first-child {
                font-size: t.$text-lg-size;
                line-height: 14px;
                font-weight: t.$font-weight-primary;
            }

            &:last-child {
                margin-top: 7px;
                line-height: 17px;
                font-size: t.$text-md-size;
                font-weight: t.$font-weight-text;
            }
        }
    }

    &__user-api {
        width: 192px;

        p {
            padding: 0;
            margin: 0;

            &:first-child {
                font-size: t.$text-sm-size;
                line-height: 14px;
                font-weight: t.$font-weight-primary;
            }

            &:last-child {
                margin-top: 7px;
                line-height: 17px;
                font-size: t.$text-sm-size;
                font-weight: t.$font-weight-text;
            }
        }
    }

    &__user-image {
        height: 50px;
        width: 50px;
        border-radius: 25px;
        text-align: center;
    }

    &__user-initials {
        text-transform: uppercase;
        color: map.get(c.$colors, "white");
        font-size: t.$text-lg-size;
    }

    &__user-divider {
        border: 1px solid map.get(c.$colors, "warm-gray-30");;
        margin-top: 5px;
        position: relative;
    }
}
.tooltip {
    display: block !important;
    z-index: 10000;
  }
  
  .tooltip .tooltip-inner {
    background: white;
    color: black;
  }
  .tooltip .tooltip-arrow {
    display: none;
  }
  
  .tooltip[x-placement^="right"] {
    margin-left: 0px;
  }
  

